Add images folder and style section-one

--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
 <body>
     <div class="container">
         <div class="header">
-            <div class="logo">
-                Header logo
-            </div>
+            <img src="./images/f1-logo.png" alt="" class="logo" 
+            width="100px" height="auto">
     
             <div class="links">
                 <ul>
@@ -23,8 +22,18 @@
             </div>
         </div>
 
-        <div class="content-one">
+        <div class="section-one">
+            <div class="section-one-left-container">
+                <h2 class="main-title">This is my first website</h2>
+                <div class="section-one-text">
+                    This is some text that will be changed after I decide what to 
+                    write. It's asmaller font and the color is lower contrast.
+                </div>
+                <button class="section-one-button">Sign up</button>
+            </div>
 
+            <img src="./images/main-image.jpg" alt="Charles Leclerc" class="main-image"
+            width="600px" height="auto">
         </div>
     </div>
 </body>
