Add images for section-two

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         <div class="section-one">
             <div class="section-one-left-container">
-                <h2 class="main-title">This is my first website</h2>
+                <h1 class="main-title">This is my first website</h1>
                 <div class="section-one-text">
                     This is some text that will be changed after I decide what to 
                     write. It's asmaller font and the color is lower contrast.
@@ -34,6 +34,37 @@
 
             <img src="./images/main-image.jpg" alt="Charles Leclerc" class="main-image"
             width="600px" height="auto">
+        </div>
+
+        <div class="section-two">
+            <h2 class="section-two-title">Here are his wins</h2>
+            <div class="card-container">
+                <div class="info">
+                    <img src="./images/first.png" alt="First win" class="first-win"
+                    width="150px" height="auto">
+                    <div class="text">This is the first win</div>
+                </div>
+                <div class="info">
+                    <img src="./images/second.png" alt="Second win" class="second-win"
+                    width="150px" height="auto">
+                    <div class="text">This is the second win</div>
+                </div>
+                <div class="info">
+                    <img src="./images/third.jpg" alt="Third win" class="third-win"
+                    width="150px" height="auto">
+                    <div class="text">This is the third win</div>
+                </div>
+                <div class="info">
+                    <img src="./images/fourth.png" alt="Fourth win" class="fourth-win"
+                    width="150px" height="auto">
+                    <div class="text">This is the fourth win</div>
+                </div>
+                <div class="info">
+                    <img src="./images/fifth.png" alt="Fifth win" class="fifth-win"
+                    width="150px" height="auto">
+                    <div class="text">This is the fifth win</div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
