Resize and style images

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </div>
 
             <img src="./images/main-image.jpg" alt="Charles Leclerc" class="main-image"
-            width="600px" height="auto">
+            width="600px" height="auto" style="border: 3px solid white; border-radius: 4px;">
         </div>
 
         <div class="section-two">
@@ -41,27 +41,27 @@
             <div class="card-container">
                 <div class="info">
                     <img src="./images/first.png" alt="First win" class="first-win"
-                    width="150px" height="auto">
+                    width="150px" height="150px">
                     <div class="text">This is the first win</div>
                 </div>
                 <div class="info">
                     <img src="./images/second.png" alt="Second win" class="second-win"
-                    width="150px" height="auto">
+                    width="150px" height="150px">
                     <div class="text">This is the second win</div>
                 </div>
                 <div class="info">
                     <img src="./images/third.jpg" alt="Third win" class="third-win"
-                    width="150px" height="auto">
+                    width="150px" height="150px">
                     <div class="text">This is the third win</div>
                 </div>
                 <div class="info">
                     <img src="./images/fourth.png" alt="Fourth win" class="fourth-win"
-                    width="150px" height="auto">
+                    width="150px" height="150px">
                     <div class="text">This is the fourth win</div>
                 </div>
                 <div class="info">
                     <img src="./images/fifth.png" alt="Fifth win" class="fifth-win"
-                    width="150px" height="auto">
+                    width="150px" height="150px">
                     <div class="text">This is the fifth win</div>
                 </div>
             </div>
