Add and style section-three

--- a/index.html
+++ b/index.html
@@ -66,6 +66,18 @@
                 </div>
             </div>
         </div>
+
+        <div class="section-three">
+            <div class="quote-container">
+                <div class="quote-text">
+                    The moment I prefer is the moment I put on the helmet, that everyone is
+                     leaving the pit lane, that I'm alone with the car and there it feels 
+                     good. You don't have any feelings anymore; it's just racing and this I 
+                     enjoy.
+                </div>
+                <div class="name">-Charles Leclerc, Scuderia Ferrari driver</div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
