Add and style section-four

--- a/index.html
+++ b/index.html
@@ -78,6 +78,20 @@
                 <div class="name">-Charles Leclerc, Scuderia Ferrari driver</div>
             </div>
         </div>
+
+        <div class="section-four">
+            <div class="section-four-container">
+                <div class="left">
+                    <div class="sign-title">Don't miss anything!</div>
+                    <div class="section-four-text">
+                        Sign up here for the latest news about Charles Leclerc!
+                    </div>
+                </div>
+                <div class="right">
+                    <button class="section-four-button">Sign up</button>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
