--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <img src="./images/f1-logo.png" alt="" class="logo" 
+            <img src="./images/f1-logo.png" alt="Formula 1 logo" class="logo" 
             width="100px" height="auto">
     
             <div class="links">
@@ -91,6 +91,10 @@
                     <button class="section-four-button">Sign up</button>
                 </div>
             </div>
+        </div>
+
+        <div class="footer">
+            <div class="copyright">Copyright © Darius Oneț 2022</div>
         </div>
     </div>
 </body>
