Change header links, main title, main text

--- a/index.html
+++ b/index.html
@@ -16,20 +16,36 @@
     
             <div class="links">
                 <ul>
-                    <li><a href="#">header link one</a></li>
-                    <li><a href="#">header link two</a></li>
-                    <li><a href="#">header link three</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Gallery</a></li>
+                    <li><a href="#">Contact</a></li>
                 </ul>
             </div>
         </div>
 
         <div class="section-one">
             <div class="section-one-left-container">
-                <h1 class="main-title">This is my first website</h1>
+                <h1 class="main-title">Charles Leclerc's F1 career</h1>
                 <div class="section-one-text">
-                    This is some text that will be changed after I decide what to 
-                    write. It's asmaller font and the color is lower contrast.
+                    Charles Marc Hervé Perceval Leclerc was born on 16 October 1997 is
+                    a Monégasque racing driver, currently racing in Formula One for
+                    Scuderia Ferrari, contracted until the end of the 2024 season.
+                    He won the GP3 Series championship in 2016 and the FIA Formula 2
+                    Championship in 2017.
                 </div>
+                <div class="section-one-text">
+                    Leclerc made his Formula One debut in 2018 for Sauber, a team
+                    affiliated with Ferrari, for which he was part of the Ferrari
+                    Driver Academy. With Sauber having finished last the year before,
+                    Leclerc led the charge to improve its finishing position in the
+                    constructors' championship to eighth, and was the higher ranked
+                    of the two Sauber drivers. He became the second-youngest driver
+                    to qualify on pole position in Formula One at the 2019 Bahrain
+                    Grand Prix. The 2019 season also saw Leclerc take his first
+                    career win in Belgium. He won the Pole Trophy in the 2019 season,
+                    becoming the youngest driver to win it.
+                </div>
+
                 <button class="section-one-button">Sign up</button>
             </div>
 
