Change section-two title and card description

--- a/index.html
+++ b/index.html
@@ -54,32 +54,37 @@
         </div>
 
         <div class="section-two">
-            <h2 class="section-two-title">Here are his wins</h2>
+            <h2 class="section-two-title">Wins Gallery</h2>
             <div class="card-container">
                 <div class="info">
                     <img src="./images/first.png" alt="First win" class="first-win"
                     width="150px" height="150px">
-                    <div class="text">This is the first win</div>
+                    <div class="text">2019 Belgian Grand Prix</div>
+                    <div class="text">Starting Position: 1</div>
                 </div>
                 <div class="info">
                     <img src="./images/second.png" alt="Second win" class="second-win"
                     width="150px" height="150px">
-                    <div class="text">This is the second win</div>
+                    <div class="text">2019 Italian Grand Prix</div>
+                    <div class="text">Starting Position: 1</div>
                 </div>
                 <div class="info">
                     <img src="./images/third.jpg" alt="Third win" class="third-win"
                     width="150px" height="150px">
-                    <div class="text">This is the third win</div>
+                    <div class="text">2022 Bahrain Grand Prix</div>
+                    <div class="text">Starting Position: 1</div>
                 </div>
                 <div class="info">
                     <img src="./images/fourth.png" alt="Fourth win" class="fourth-win"
                     width="150px" height="150px">
-                    <div class="text">This is the fourth win</div>
+                    <div class="text">2022 Australian Grand Prix</div>
+                    <div class="text">Starting Position: 1</div>
                 </div>
                 <div class="info">
                     <img src="./images/fifth.png" alt="Fifth win" class="fifth-win"
                     width="150px" height="150px">
-                    <div class="text">This is the fifth win</div>
+                    <div class="text">2022 Austrian Grand Prix</div>
+                    <div class="text">Starting Position: 2</div>
                 </div>
             </div>
         </div>
