Change page to be responsive

--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <img src="./images/f1-logo.png" alt="Formula 1 logo" class="logo" 
-            width="100px" height="auto">
+            <img src="./images/f1-logo.png" alt="Formula 1 logo" class="logo">
     
             <div class="links">
                 <ul>
@@ -49,40 +48,34 @@
                 <button class="section-one-button">Sign up</button>
             </div>
 
-            <img src="./images/main-image.jpg" alt="Charles Leclerc" class="main-image"
-            width="600px" height="auto" style="border: 3px solid white; border-radius: 4px;">
+            <img src="./images/main-image.jpg" alt="Charles Leclerc" class="main-image">
         </div>
 
         <div class="section-two">
             <h2 class="section-two-title">Wins Gallery</h2>
             <div class="card-container">
                 <div class="info">
-                    <img src="./images/first.png" alt="First win" class="first-win"
-                    width="150px" height="150px">
+                    <img src="./images/first.png" alt="First win" class="first-win">
                     <div class="text">2019 Belgian Grand Prix</div>
                     <div class="text">Starting Position: 1</div>
                 </div>
                 <div class="info">
-                    <img src="./images/second.png" alt="Second win" class="second-win"
-                    width="150px" height="150px">
+                    <img src="./images/second.png" alt="Second win" class="second-win">
                     <div class="text">2019 Italian Grand Prix</div>
                     <div class="text">Starting Position: 1</div>
                 </div>
                 <div class="info">
-                    <img src="./images/third.jpg" alt="Third win" class="third-win"
-                    width="150px" height="150px">
+                    <img src="./images/third.jpg" alt="Third win" class="third-win">
                     <div class="text">2022 Bahrain Grand Prix</div>
                     <div class="text">Starting Position: 1</div>
                 </div>
                 <div class="info">
-                    <img src="./images/fourth.png" alt="Fourth win" class="fourth-win"
-                    width="150px" height="150px">
+                    <img src="./images/fourth.png" alt="Fourth win" class="fourth-win">
                     <div class="text">2022 Australian Grand Prix</div>
                     <div class="text">Starting Position: 1</div>
                 </div>
                 <div class="info">
-                    <img src="./images/fifth.png" alt="Fifth win" class="fifth-win"
-                    width="150px" height="150px">
+                    <img src="./images/fifth.png" alt="Fifth win" class="fifth-win">
                     <div class="text">2022 Austrian Grand Prix</div>
                     <div class="text">Starting Position: 2</div>
                 </div>
