Link header buttons

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CL16</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Charles Leclerc 16</title>
+    <link rel="stylesheet" href="./css/style.css">
     <link rel="shortcut icon" href="./images/favicon.ico">
 </head>
 <body>
@@ -15,9 +15,9 @@
     
             <div class="links">
                 <ul>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Gallery</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="./html/about.html">About</a></li>
+                    <li><a href="#gallery">Gallery</a></li>
+                    <li><a href="#contact">Contact</a></li>
                 </ul>
             </div>
         </div>
@@ -51,7 +51,7 @@
             <img src="./images/main-image.jpg" alt="Charles Leclerc" class="main-image">
         </div>
 
-        <div class="section-two">
+        <div class="section-two" id="gallery">
             <h2 class="section-two-title">Wins Gallery</h2>
             <div class="card-container">
                 <div class="info">
@@ -87,14 +87,14 @@
                 <div class="quote-text">
                     The moment I prefer is the moment I put on the helmet, that everyone is
                      leaving the pit lane, that I'm alone with the car and there it feels 
-                     good. You don't have any feelings anymore; it's just racing and this I 
+                     good. You don't have any feelings anymore, it's just racing and this I 
                      enjoy.
                 </div>
                 <div class="name">-Charles Leclerc, Scuderia Ferrari driver</div>
             </div>
         </div>
 
-        <div class="section-four">
+        <div class="section-four" id="contact">
             <div class="section-four-container">
                 <div class="left">
                     <div class="sign-title">Don't miss anything!</div>
