Link and style the about page

--- a/html/about.html
+++ b/html/about.html
@@ -9,6 +9,39 @@
     <link rel="shortcut icon" href="../images/favicon.ico">
 </head>
 <body>
+    <div class="container">
+        <div class="header">
+            <img src="../images/f1-logo.png" alt="Formula 1 logo" class="logo">
     
+            <div class="links">
+                <ul>
+                    <li><a href="../index.html">Back</a></li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="about-section">
+            <div class="about-container">
+                <h1 class="about-title">About Me</h1>
+                <div class="about-text">
+                    I am a 22 years old student at "Aurel Vlaicu" University in Arad,
+                    studying for a Computer Science degree and this is my first big
+                    project where I try my best to make it look as professional as I could.
+                </div>
+                <div class="about-text">
+                    My goal is by the time I finish the University to have at least a few
+                    big projects in multiple languages and to be enployed somewhere where
+                    I could learn a lot more things.
+                </div>
+                <div class="about-text">
+                    I will definitely come back to this project to see what else I can do
+                    to improve it.
+                </div>
+            </div>
+        </div>
+        <div class="about-footer">
+            <div class="copyright">Copyright © Darius Oneț 2022</div>
+        </div>
+    </div>
 </body>
 </html>
